--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,1 +1,4 @@
 <h1>login page</h1>
+<input type="text" name="name" value="" placeholder="User Name">
+<input type="password" name="name" value="" placeholder="Password">
+<button type="submit" name="button">Login</button>
