--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -1,1 +1,33 @@
-<h1>create recipe</h1>
+
+
+<div class="col-md-offset-3 col-md-6">
+<h1>create! recipe</h1>
+
+    <form>
+
+        <fieldset class="form-group">
+            <label for="formGroupExampleInput">Recipe Name</label>
+            <input type="text" class="form-control" id="" placeholder="Firecracker Sauce">
+        </fieldset>
+        <fieldset class="form-group">
+            <label for="formGroupExampleInput2">Recipe Time</label>
+            <input type="text" class="form-control" id="" placeholder="20min">
+        </fieldset>
+        <fieldset class="form-group">
+            <label for="formGroupExampleInput2">Ingredients</label>
+            <input type="text" class="form-control" id="" placeholder="Salt, Pepper, Garlic...">
+        </fieldset>
+        <fieldset class="form-group">
+            <label for="exampleTextarea">Recipe Instructions</label>
+            <textarea class="form-control" id="" rows="3"></textarea>
+        </fieldset>
+        <fieldset class="form-group">
+            <label for="exampleInputFile">Picture input</label>
+            <input type="file" class="form-control-file" id="">
+            <small class="text-muted">Select a picture that displays your meal!</small>
+        </fieldset>
+        <button type="submit" class="btn btn-primary">Submit New Recipe</button>
+
+    </form>
+
+</div>
