--- a/templates/mixmatch.html
+++ b/templates/mixmatch.html
@@ -1,2 +1,21 @@
-<h1>mix match</h1>
-<img src="templates/images/mixlogo.png" alt="" />
+
+
+<div class="container">
+
+</div>
+
+<div class="topCatagory">
+  <div class="topChef">
+    <div class="chef1"></div>
+    <div class="chef2"></div>
+    <div class="chef3"></div>
+
+  </div>
+  <div class="topBrews">
+    <div class="andMatch">N'MATCH</div>
+    <div class="chef1"></div>
+    <div class="chef2"></div>
+    <div class="chef3"></div>
+
+  </div>
+</div>
