--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
 <h1>login page</h1>
 <input ng-model = "username" type="text" name="name" value="" placeholder="User Name">
-<input ng-model = "userpassword" type="password" name="name" value="" placeholder="Password">
+<input ng-model = "password" type="password" name="name" value="" placeholder="Password">
 <button ng-click = "login()" type="button" name="button">Login</button>
