--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -1,7 +1,5 @@
-
-
 <div class="col-md-offset-3 col-md-6">
-<h1>create! recipe</h1>
+    <h1>create!</h1>
 
     <form>
 
@@ -13,6 +11,7 @@
             <label for="formGroupExampleInput2">Recipe Time</label>
             <input type="text" class="form-control" id="" placeholder="20min">
         </fieldset>
+
         <fieldset class="form-group">
             <label for="formGroupExampleInput2">Ingredients</label>
             <input type="text" class="form-control" id="" placeholder="Salt, Pepper, Garlic...">
@@ -22,10 +21,22 @@
             <textarea class="form-control" id="" rows="3"></textarea>
         </fieldset>
         <fieldset class="form-group">
+        <label class="radio-inline">
+            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Easy
+        </label>
+        <label class="radio-inline">
+            <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Medium
+        </label>
+        <label class="radio-inline">
+            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Hard
+        </label>
+      </fieldset>
+        <fieldset class="form-group">
             <label for="exampleInputFile">Picture input</label>
             <input type="file" class="form-control-file" id="">
             <small class="text-muted">Select a picture that displays your meal!</small>
         </fieldset>
+
         <button type="submit" class="btn btn-primary">Submit New Recipe</button>
 
     </form>
