--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 <h1>login page</h1>
+<fieldset class="form-group">
 <input ng-model = "username" type="text" name="name" value="" placeholder="User Name">
 <input ng-model = "password" type="password" name="name" value="" placeholder="Password">
 <button ng-click = "login()" type="button" name="button">Login</button>
