--- a/styles.scss
+++ b/styles.scss
@@ -58,3 +58,8 @@ border: 2px solid brown;
   font-family: 'Amatic SC', cursive;
   font-size: 30px;
 }
+.test-box {
+  height: 300px;
+  border: 1px dashed black;
+  background-color: lightblue;
+}
