--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -4,31 +4,31 @@
     <form>
 
         <fieldset class="form-group">
-            <label for="formGroupExampleInput">Recipe Name</label>
+            <label for="Recip">Recipe Name</label>
             <input type="text" class="form-control" id="" placeholder="Firecracker Sauce">
         </fieldset>
         <fieldset class="form-group">
-            <label for="formGroupExampleInput2">Recipe Time</label>
+            <label for="Time">Recipe Time</label>
             <input type="text" class="form-control" id="" placeholder="20min">
         </fieldset>
 
         <fieldset class="form-group">
-            <label for="formGroupExampleInput2">Ingredients</label>
+            <label for="ingredients">Ingredients</label>
             <input type="text" class="form-control" id="" placeholder="Salt, Pepper, Garlic...">
         </fieldset>
         <fieldset class="form-group">
-            <label for="exampleTextarea">Recipe Instructions</label>
+            <label for="instructions">Recipe Instructions</label>
             <textarea class="form-control" id="" rows="3"></textarea>
         </fieldset>
         <fieldset class="form-group">
         <label class="radio-inline">
-            <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Easy
+            <input type="radio" name="inlineRadioOptions" id="" value="easy"> Easy
         </label>
         <label class="radio-inline">
-            <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Medium
+            <input type="radio" name="inlineRadioOptions" id="" value="medium"> Medium
         </label>
         <label class="radio-inline">
-            <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Hard
+            <input type="radio" name="inlineRadioOptions" id="" value="hard"> Hard
         </label>
       </fieldset>
         <fieldset class="form-group">
