--- a/public/styles.css
+++ b/public/styles.css
@@ -1,27 +1,55 @@
+.everything {
+  background-color: #626A70; }
+
 header {
   width: 100%;
   height: 250px;
-  border: 2px black solid;
   background-repeat: no-repeat;
   background-color: #FCFBE3; }
 
 .topCatagory {
   width: 100%;
-  height: 1000px;
-  border: 2px black solid; }
+  height: 1000px; }
 
 .andMatch {
   width: 100%;
-  height: 1000px;
-  border: 2px black solid; }
+  height: 1000px; }
 
 .andMatch {
-  width: 90%;
-  height: 75px;
-  border: 2px solid blue;
+  width: 102%;
+  height: 100px;
   font-family: 'Amatic SC', cursive;
   display: inline-block;
-  margin-left: 2.6%; }
+  background-color: #FCFBE3;
+  color: #D3B18C;
+  text-align: center;
+  font-size: 58px;
+  margin-left: -22px;
+  display: inline-block; }
+
+.spoon {
+  display: inline-block;
+  width: 91%;
+  float: left;
+  /* right: 7%; */
+  position: relative;
+  right: -5%;
+  top: -114%; }
+
+.matchFont {
+  font-family: 'Amatic SC', cursive;
+  color: #D3B18C;
+  position: relative;
+  left: -46%;
+  font-size: 58px; }
+
+.knife {
+  display: inline-block;
+  position: relative;
+  float: right;
+  width: 27%;
+  top: -438px;
+  left: -8%; }
 
 .chef1 {
   width: 30%;
@@ -53,7 +81,58 @@ header {
 .navbarnavbar-inverse {
   background-color: #626A70; }
 
+.navnavbar-nav {
+  margin-right: 6%;
+  text-align: center; }
+
 .menuText {
   color: white;
   font-family: 'Amatic SC', cursive;
   font-size: 30px; }
+
+.loginView1 {
+  padding-right: 30px;
+  display: inline-block;
+  text-align: center;
+  display: inline-block; }
+
+.loginView2 {
+  padding-right: 30px;
+  display: inline-block;
+  text-align: center;
+  display: inline-block; }
+
+.loginView3 {
+  padding-right: 30px;
+  display: inline-block;
+  text-align: center;
+  display: inline-block; }
+
+.loginView4 {
+  padding-right: 30px;
+  display: inline-block;
+  text-align: center;
+  display: inline-block; }
+
+.loginContainer {
+  position: relative;
+  right: -35%;
+  border: 2px solid white;
+  width: 24%;
+  height: 145px;
+  background-color: #FCFBE3;
+  bottom: -70px; }
+
+h1 {
+  font-family: 'Amatic SC', cursive; }
+
+#loginType {
+  font-family: 'Amatic SC', cursive;
+  position: relative;
+  left: 45%;
+  bottom: -18px; }
+
+.loginFont {
+  font-family: 'Amatic SC', cursive;
+  color: #D2B08C;
+  text-align: center; }
