--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,6 @@
-<h1>login page</h1>
+<div class="loginContainer">
+<h1 class = "loginFont">login page</h1>
 <input ng-model = "username" type="text" name="name" value="" placeholder="User Name">
 <input ng-model = "userpassword" type="password" name="name" value="" placeholder="Password">
-<button ng-click = "login()" type="button" name="button">Login</button>
+<button ng-click = "login()" type="button" name="button" id = "loginType">Login</button>
+</div>
