--- a/templates/mixmatch.html
+++ b/templates/mixmatch.html
@@ -12,10 +12,23 @@
 
   </div>
   <div class="topBrews">
-    <div class="andMatch">N'MATCH</div>
+    <div class="andMatch">
+      <div class="spoon">
+        <img src="templates/images/spoon.svg" class = "spoon" style="width: 25%;"/>
+      </div>
+      <h1 class = "matchFont">
+        N'MATCH
+      </h1>
+      <div class="knife">
+        <img src="templates/images/knife.svg"/>
+      </div>
+    </div>
     <div class="chef1"></div>
     <div class="chef2"></div>
     <div class="chef3"></div>
 
   </div>
+  <footer>
+    
+  </footer>
 </div>
