--- a/templates/create.html
+++ b/templates/create.html
@@ -1,7 +1,7 @@
 <div class="col-md-offset-3 col-md-6">
     <h1>create!</h1>
 
-    <form>
+    <form method="post" action="/create-recipe" enctype="multipart/form-data">
 
         <fieldset class="form-group">
             <label for="Recip">Recipe Name</label>
