--- a/templates/create.html
+++ b/templates/create.html
@@ -5,11 +5,11 @@
 
         <fieldset class="form-group">
             <label for="Recip">Recipe Name</label>
-            <input ng-model="recipeName" type="text" class="form-control" id="" placeholder="Firecracker Sauce">
+            <input  type="text" class="form-control" id="" placeholder="Firecracker Sauce">
         </fieldset>
         <fieldset class="form-group">
             <label for="Time">Recipe Time</label>
-            <input ng-model="time" type="text" class="form-control" id="" placeholder="20min">
+            <input  type="number" class="form-control" id="" placeholder="20min">
         </fieldset>
 
         <fieldset class="form-group">
@@ -37,7 +37,7 @@
             <small class="text-muted">Select a picture that displays your meal!</small>
         </fieldset>
 
-        <button ng-click="createRecipe()"type="button" class="btn btn-primary">Submit New Recipe</button>
+        <button type="button" class="btn btn-primary">Submit New Recipe</button>
 
     </form>
 
