--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -37,7 +37,7 @@
             <small class="text-muted">Select a picture that displays your meal!</small>
         </fieldset>
 
-        <button type="button" class="btn btn-primary">Submit New Recipe</button>
+        <button ng-click='createRecipe()'type="button" class="btn btn-primary">Submit New Recipe</button>
 
     </form>
 
