--- a/templates/create.html
+++ b/templates/create.html
@@ -14,11 +14,11 @@
 
         <fieldset class="form-group">
             <label for="ingredients">Ingredients</label>
-            <input ng-model="ingredients" type="text" class="form-control" id="" placeholder="Salt, Pepper, Garlic...">
+            <input  type="text" class="form-control" id="" placeholder="Salt, Pepper, Garlic...">
         </fieldset>
         <fieldset class="form-group">
             <label for="instructions">Recipe Instructions</label>
-            <textarea ng-model="instructions" class="form-control" id="" rows="3"></textarea>
+            <textarea  class="form-control" id="" rows="3"></textarea>
         </fieldset>
         <fieldset class="form-group">
         <label class="radio-inline">
