--- a/templates/create.html
+++ b/templates/create.html
@@ -1,4 +1,4 @@
-<div class="col-md-offset-3 col-md-6">
+<div id = "createContainer"class="col-md-offset-3 col-md-6">
 <h1>START YOUR MIX</h1>
 
     <form>
