--- a/styles.scss
+++ b/styles.scss
@@ -152,7 +152,7 @@ h1{
 left: -6%;
 top: 52px;
   width: 60%;
-    height: 625px;
+    // height: 625px;
     /* border: 2px solid red; */
     background-color: #FCFBE3;
 }
