--- a/templates/create.html
+++ b/templates/create.html
@@ -45,7 +45,7 @@
             <small class="text-muted">Select a picture that displays your meal!</small>
         </fieldset>
 
-        <button ng-click='createRecipe()' type="submit" class="btn btn-primary">Submit New Recipe</button>
+        <button type="submit" class="btn btn-primary">Submit New Recipe</button>
 
     </form>
 
