--- a/public/styles.css
+++ b/public/styles.css
@@ -152,3 +152,13 @@ h1 {
 label {
   font-family: 'Amatic SC', cursive;
   font-size: 20px; }
+
+.test-box {
+  background-color: lightblue;
+  width: 24%;
+  height: 400px;
+  border: 1px solid black; }
+
+.picture-container img {
+  max-width: 50px;
+  max-height: 50px; }
