--- a/templates/create.html
+++ b/templates/create.html
@@ -16,7 +16,7 @@
             </select>
         </fieldset>
         <fieldset class="form-group">
-            <label for="Time">Recipe Time</label>
+            <label for="Time">Recipe Time(in minutes)</label>
             <input type="number" name="time" class="form-control" id="" placeholder="20min">
         </fieldset>
 
