--- a/templates/rating.html
+++ b/templates/rating.html
@@ -13,10 +13,12 @@
     <button ng-click= "rateRecipe(recipe, true)" class="btn btn-primary" type="button" name="button">UpVote</button>
     <button ng-click= "rateRecipe(recipe, false)" class="btn btn-primary" type="button" name="button">DownVote</button>
     <!-- <div class="" ng-if= "{{recipe.user.username}} === {{recipe.user.username}}"> -->
+    <div class="">
+
       <button ng-click= "deleteRecipe" class="btn btn-primary" type="button" name="button">Delete</button>
       <button ng-click= "editRecipe" class="btn btn-primary" type="button" name="button">Edit</button>
 
-    <!-- </div> -->
+    </div>
   </div>
 
 </div>
