--- a/templates/rating.html
+++ b/templates/rating.html
@@ -15,7 +15,7 @@
     <!-- <div class="" ng-if= "{{recipe.user.username}} === {{recipe.user.username}}"> -->
     <div class="">
 
-      <button ng-click= "deleteRecipe" class="btn btn-primary" type="button" name="button">Delete</button>
+      <button ng-click= "delRecipe($index)" class="btn btn-primary" type="button" name="button">Delete</button>
       <button ng-click= "editRecipe" class="btn btn-primary" type="button" name="button">Edit</button>
 
     </div>
