--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -17,7 +17,7 @@
         </fieldset>
         <fieldset class="form-group">
             <label for="Time">Recipe Time</label>
-            <input type="number" name="time" class="form-control" id="" placeholder="20min">
+            <input type="number" name="time" class="form-control" id="time" placeholder="20min">
         </fieldset>
 
         <fieldset class="form-group">
