working on repeat for mix-match

--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -12,6 +12,9 @@
                 <option>Breakfast</option>
                 <option>Lunch</option>
                 <option>Dinner</option>
+                <option>Breakfast Drink</option>
+                <option>Lunch Cocktail</option>
+                <option>Dinner apertif</option>
 
             </select>
         </fieldset>
