--- a/public/styles.css
+++ b/public/styles.css
@@ -178,17 +178,17 @@ label {
     display: block;
     height: 400px;
     width: 100%;
-    margin-left: 0px; }
+    margin-left: 0; }
   .chef2 {
     display: block;
     height: 400px;
     width: 100%;
-    margin-left: 0px; }
+    margin-left: 0; }
   .chef3 {
     display: block;
     height: 400px;
     width: 100%;
-    margin-left: 0px; }
+    margin-left: 0; }
   #createContainer {
     position: relative;
     left: -3%;
@@ -218,17 +218,17 @@ label {
     display: block;
     height: 400px;
     width: 100%;
-    margin-left: 0px; }
+    margin-left: 0; }
   .chef2 {
     display: block;
     height: 400px;
     width: 100%;
-    margin-left: 0px; }
+    margin-left: 0; }
   .chef3 {
     display: block;
     height: 400px;
     width: 100%;
-    margin-left: 0px; }
+    margin-left: 0; }
   #createContainer {
     position: relative;
     left: -3%;
@@ -499,13 +499,12 @@ label {
     color: #D3B18C;
     position: relative;
     bottom: 327px;
-    width: 58px; } }
-.test-box {
-  background-color: lightblue;
-  width: 24%;
-  height: 400px;
-  border: 1px solid black; }
-
-.picture-container img {
-  max-width: 50px;
-  max-height: 50px; }
+    width: 58px; }
+  .test-box {
+    background-color: lightblue;
+    width: 24%;
+    height: 400px;
+    border: 1px solid black; }
+  .picture-container img {
+    max-width: 50px;
+    max-height: 50px; } }
