ngrepeat on mixmatch page

--- a/public/templates/mixmatch.html
+++ b/public/templates/mixmatch.html
@@ -4,9 +4,14 @@
 
 <div class="topCatagory">
     <div class="topChef">
-        <div ng-repeat="recipe in recipes | limitTo: 3 " class="chef1">
-            <h1> {{recipe.recipeName}}</h1>
-            <h3>{{recipe.votes}}</h3>
+        <div ng-repeat="recipe in recipes | orderBy: '-category' | limitTo: 3 " class="chef1">
+          <h1>Recipe: {{recipe.recipeName}}</h1>
+          <h3>Creater: {{recipe.user.username}}</h3>
+          <h3>Category: {{recipe.category}}</h3>
+          <h3>Votes: {{recipe.votes}}</h3>
+          <div class="picture-container">
+            <img ng-src="files/{{recipe.fileName}}" alt="" />
+          </div>
             <!-- <div class="chef2"></div>
     <div class="chef3"></div> -->
         </div>
@@ -23,11 +28,14 @@
                 <img src="templates/images/knife.svg" />
             </div>
         </div>
-        <div ng-repeat="recipe in recipes | limitTo: 3 " class="chef1">
-            <h1> {{recipe.recipeName}}</h1>
-            <h3>{{recipe.votes}}</h3>
-            <!-- <div class="chef2"></div>
-    <div class="chef3"></div> -->
+        <div ng-repeat="recipe in recipes | orderBy: '-votes' | limitTo: 3 " class="chef1">
+          <h1>Recipe: {{recipe.recipeName}}</h1>
+          <h3>Creater: {{recipe.user.username}}</h3>
+          <h3>Category: {{recipe.category}}</h3>
+          <h3>Votes: {{recipe.votes}}</h3>
+          <div class="picture-container">
+            <img ng-src="files/{{recipe.fileName}}" alt="" />
+          </div>
         </div>
         <!-- <div class="chef1"></div>
         <div class="chef2"></div>
