--- a/public/templates/rating.html
+++ b/public/templates/rating.html
@@ -16,7 +16,7 @@
 
 
       <button ng-click= "delRecipe(recipe)" class="btn btn-primary" type="button" name="button">Delete</button>
-      <button ng-click= "editRecipe()" class="btn btn-primary" type="button" name="button">Edit</button>
+      <!-- <button ng-click= "editRecipe()" class="btn btn-primary" type="button" name="button">Edit</button> -->
 
     </div>
   </div>
