--- a/public/styles.css
+++ b/public/styles.css
@@ -52,8 +52,9 @@ header {
   left: -8%; }
 
 .chef1 {
+  text-align: center;
   width: 30%;
-  border: 2px red solid;
+  background-color: lightblue;
   float: left;
   height: 400px;
   display: inline-block;
@@ -506,5 +507,5 @@ label {
     height: 400px;
     border: 1px solid black; }
   .picture-container img {
-    max-width: 50px;
-    max-height: 50px; } }
+    max-width: 100px;
+    max-height: 100px; } }
